--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                 <li><img src="images/figma.png" alt=""></li>
                 <li><img src="images/canva.png" alt=""></li>
                 <li><img src="images/vscode.png" alt=""></li>
+                <li><img src="images/github.png" alt=""></li>
             </div>
             <p style="font-weight: 700">FAVORITE WEB DEVELOPMENT LANGUAGES</p>
             <div class="img2">
