--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                 <div class="overlay-content">
                   <a href="#">About</a>
-                  <a href="#">Showcase</a>
+                  <a href="index.html">Showcase</a>
                   <a href="#">Case Study</a>
                   <a href="#">Contact</a>
                 </div>
