--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div id="myNav" class="overlay">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                 <div class="overlay-content">
-                  <a href="#">About</a>
+                  <a href="#intro">About</a>
                   <a href="index.html">Showcase</a>
                   <a href="#">Case Study</a>
                   <a href="#">Contact</a>
@@ -49,68 +49,44 @@
         </div>
         <div>
             <center><div class="img1">
-                <li class="container2">
+                <li>
                     <a href="https://www.figma.com/community/file/1114921249053475523" target="_blank">
-                        <img src="images/dmis.png" alt="">
-                        <div class="overlay2">
-                            <div class="text">DOST-FPRDI ODPS - Document Management Information System</div>
-                        </div>
+                        <img src="images/dmis.png" alt="" class="zoom">
                     </a>
                 </li>
-                <li class="container2">
+                <li>
                     <a href="https://www.figma.com/community/file/1069145923032887684" target="_blank">
-                        <img src="images/rdro-riders.png" alt="">
-                        <div class="overlay2">
-                            <div class="text">Rider's Delivery Route Optimization Using A* Algorithm (Delivery Rider's App)</div>
-                        </div>
+                        <img src="images/rdro-riders.png" alt="" class="zoom">
                     </a>
                 </li>
-                <li class="container2">
+                <li>
                     <a href="https://www.figma.com/community/file/1069145923032887684" target="_blank">
-                        <img src="images/rdro-admin.png" alt="">
-                        <div class="overlay2">
-                            <div class="text">Rider's Delivery Route Optimization Using A* Algorithm (Admin's App)</div>
-                        </div>
+                        <img src="images/rdro-admin.png" alt="" class="zoom">
                     </a>
                 </li>
-                <li class="container2">
+                <li>
                     <a href="https://www.figma.com/community/file/1069145923032887684" target="_blank">
-                        <img src="images/rdro-admin-website.png" alt="">
-                        <div class="overlay2">
-                            <div class="text">Rider's Delivery Route Optimization Using A* Algorithm (Admin's Website)</div>
-                        </div>
+                        <img src="images/rdro-admin-website.png" alt="" class="zoom">
                     </a>
                 </li>
-                <li class="container2">
+                <li>
                     <a href="https://www.figma.com/community/file/1069146567302323589" target="_blank">
-                        <img src="images/advance-website.png" alt="">
-                        <div class="overlay2">
-                            <div class="text">Personal Website - Advance</div>
-                        </div>
+                        <img src="images/advance-website.png" alt="" class="zoom">
                     </a>
                 </li>
-                <li class="container2">
+                <li>
                     <a href="https://www.figma.com/community/file/1069146567302323589" target="_blank">
-                        <img src="images/violet-website.png" alt="">
-                        <div class="overlay2">
-                            <div class="text">Personal Website - Violet</div>
-                        </div>
+                        <img src="images/violet-website.png" alt="" class="zoom">
                     </a>
                 </li>
-                <li class="container2">
+                <li>
                     <a href="https://www.figma.com/community/file/1070261686949293814" target="_blank">
-                        <img src="images/calculator.png" alt="">
-                        <div class="overlay2">
-                            <div class="text">Simple Calculator</div>
-                        </div>
+                        <img src="images/calculator.png" alt="" class="zoom">
                     </a>
                 </li>
-                <li class="container2">
+                <li>
                     <a href="https://www.figma.com/community/file/1071003083430970406" target="_blank">
-                        <img src="images/neon-music-player.png" alt="">
-                        <div class="overlay2">
-                            <div class="text">Neon Music Player</div>
-                        </div>
+                        <img src="images/neon-music-player.png" alt="" class="zoom">
                     </a>
                 </li>
             </div></center>
