--- a/show-case.html
+++ b/show-case.html
@@ -43,10 +43,8 @@
             </li>
         </div>
 
-        <div class="header">
-            <p>Are you finding a modern designs for your business?</p>
-            <h1>Let's convert idea to reality!</h1>
-            <p>Here's my recent designs:</p>
+        <div class="header-nav-content">
+            <p></p>
         </div>
         <div>
             <center><div class="img1">
@@ -65,20 +63,35 @@
                         <img src="images/rdro-admin.png" alt="" class="zoom">
                     </a>
                 </li>
-                <a href="show-case.html" style="text-decoration: none;"><button class="btn-grad">See More</button></a>
+                <li>
+                    <a href="https://www.figma.com/community/file/1069145923032887684" target="_blank">
+                        <img src="images/rdro-admin-website.png" alt="" class="zoom">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.figma.com/community/file/1069146567302323589" target="_blank">
+                        <img src="images/advance-website.png" alt="" class="zoom">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.figma.com/community/file/1069146567302323589" target="_blank">
+                        <img src="images/violet-website.png" alt="" class="zoom">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.figma.com/community/file/1070261686949293814" target="_blank">
+                        <img src="images/calculator.png" alt="" class="zoom">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.figma.com/community/file/1071003083430970406" target="_blank">
+                        <img src="images/neon-music-player.png" alt="" class="zoom">
+                    </a>
+                </li>
             </div></center>
         </div>
-        <div class="intro">
-            <p>Hi I am</p>
-            <h1 style="font-weight: 700;">Leonel Esguerra</h1>
-            <p>I currently live here in Laguna, Philippines. I studied Bachelor of Science in Computer Science. For the four years of studying Computer Science, I was interested in the field of designing. I love to see designs and I love to converted my ideas to reality. I want pursue my career in designing and practice my skill in the industry. <a href="about.html" style="color: red;">See more</a></p>
-            <p style="font-weight: 700;">What is UI/UX Designs?</p>
-            <p>The user interface is the graphical layout of an application. It consists of the buttons users click on, the text they read, the images, sliders, text entry fields, and all the rest of the items the user interacts with. This includes screen layout, transitions, interface animations and every single micro-interaction. Any sort of visual element, interaction, or animation must all be designed.</p>
-            <p>A user’s experience of the app is determined by how they interact with it. Is the experience smooth and intuitive or clunky and confusing? Does navigating the app feel logical or does it feel arbitrary? Does interacting with the app give people the sense that they’re efficiently accomplishing the tasks they set out to achieve or does it feel like a struggle? User experience is determined by how easy or difficult it is to interact with the user interface elements that the UI designers have created.</p>
-            <p style="font-weight: 700;">What is Web Development?</p>
-            <p>Web development refers in general to the tasks associated with developing websites for hosting via intranet or internet. The web development process includes web design, web content development, client-side/server-side scripting and network security configuration, among other tasks.<br><br></p>
             
-            <div class="footer">
+        <div class="footer">
                 <center>
                     <p>Let's Connect</p>
                     <div class="img3">
