--- a/contact.html
+++ b/contact.html
@@ -44,37 +44,31 @@
         </div>
 
         <div class="header-nav-content">
-            <p>About me</p>
-            <h1>Frontend Developer & UI/UX Designer</h1>
+            <p></p>
+            <h1></h1>
         </div>
 
         <div class="intro">
-            <p>Hi I am</p>
-            <h1 style="font-weight: 700;">Leonel Esguerra</h1>
-            <p>I currently live here in Laguna, Philippines. I studied Bachelor of Science in Computer Science. For the four years of studying Computer Science, I was interested in the field of designing. I love to see designs and I love to converted my ideas to reality. I want to pursue my career in designing and practice my skills in the industry.<br><br>
-                In my early experience as an On-The-Job Trainee when I am Senior High School and College and
-                also working as a production operator in a company, I was involved in communicating with
-                different people, answering calls, accomplishing tasks, working with the team, and work
-                independently. In my experience as an On-The-Job Trainee at DOST-FPRDI, I was assigned a role
-                as a Frontend Developer. I am responsible for designing and developing the user interface (UI)
-                of the system and preparing technical documentation. Being an OJT, I was also responsible to
-                assist other employees in terms of technical aspects, attending seminars, answering calls and
-                preparing weekly accomplishment reports.</p>
-            <p style="font-weight: 700">FAVORITE TOOLS</p>
-            <div class="img2">
-                <li><img src="images/figma.png" alt=""></li>
-                <li><img src="images/canva.png" alt=""></li>
-                <li><img src="images/vscode.png" alt=""></li>
-                <li><img src="images/github.png" alt=""></li>
+            <p></p>
+            
+            <p style="font-weight: 700">CONTACT ME ON:<br><br></p>
+            <div class="contact">
+                <li><img src="images/fb.png" alt=""></li>
+                <li><a href="https://www.facebook.com/nhelez04" target="_blank">https://www.facebook.com/nhelez04</a></li>
             </div>
-            <p style="font-weight: 700">FAVORITE WEB DEVELOPMENT LANGUAGES</p>
-            <div class="img2">
-                <li><img src="images/html.png" alt=""></li>
-                <li><img src="images/css.png" alt=""></li>
-                <li><img src="images/javascript.png" alt=""></li>
-                <li><img src="images/jquery.png" alt=""></li>
-                <li><img src="images/laravel.png" alt=""></li>
+            <div class="contact">
+                <li><img src="images/instagram.png" alt=""></li>
+                <li><a href="https://www.instagram.com/nhel_ez/" target="_blank">https://www.instagram.com/nhel_ez/</a></li>
             </div>
+            <div class="contact">
+                <li><img src="images/gmail.png" alt=""></li>
+                <li><a href="mailto:leonelesguerra0401@gmail.com" target="_blank">leonelesguerra0401@gmail.com</a></li>
+            </div>
+            <div class="contact">
+                <li><img src="images/linkedin.png" alt=""></li>
+                <li><a href="https://www.linkedin.com/in/leonel-esguerra-3a0801211" target="_blank">https://www.linkedin.com/in/leonel-esguerra-3a0801211</a></li>
+            </div>
+            
             <div class="footer">
                 <center>
                     <p>Let's Connect</p>
