--- a/case-study.html
+++ b/case-study.html
@@ -42,8 +42,8 @@
             </li>
         </div>
 
-        <div class="header-nav-content">
-            <p></p>
+        <div class="header-nav-showcase">
+            <h1>Case Study</h1>
         </div>
         <div>
             <center><div class="img1">
