--- a/show-case.html
+++ b/show-case.html
@@ -42,8 +42,8 @@
             </li>
         </div>
 
-        <div class="header-nav-content">
-            <p></p>
+        <div class="header-nav-showcase">
+            <h1>Showcase</h1>
         </div>
         <div>
             <center><div class="img1">
