--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             
             <div class="footer">
                 <center>
-                    <p>Let's Connect</p>
+                    <h2>Let's Connect</h2>
                     <div class="img3">
                         <li><a href="https://www.facebook.com/nhelez04" target="_blank"><img src="images/fb.png" alt=""></a></li>
                         <li><a href="https://www.instagram.com/nhel_ez/" target="_blank"><img src="images/instagram.png" alt=""></a></li>
