--- a/about.html
+++ b/about.html
@@ -14,31 +14,37 @@
     </head>
     <body>
         <div class="header">
-            <li class="logo"><a href="index.html"><img src="images/Personal Website-Advance Logo.png" alt="logo"></a></li>
-            <li class="author-name"><a href="index.html">Leonel Esguerra</a></li>
+            <li class="logo">
+                <a href="index.html">
+                    <img src="images/Personal Website-Advance Logo.png" alt="logo">
+                </a>
+            </li>
+
+            <li class="author-name">
+                <a href="index.html">Leonel Esguerra</a>
+            </li>
             
             <li class="menu"> 
-            <div id="myNav" class="overlay">
-                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                <div class="overlay-content">
-                    <a href="index.html">Home</a>
-                    <a href="about.html">About</a>
-                    <a href="show-case.html">Showcase</a>
-                    <a href="case-study.html">Case Study</a>
+                <div id="myNav" class="overlay">
+                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                    <div class="overlay-content">
+                        <a href="index.html">Home</a>
+                        <a href="about.html">About</a>
+                        <a href="show-case.html">Showcase</a>
+                        <a href="case-study.html">Case Study</a>
+                    </div>
                 </div>
-            </div>
-
-            <span style="font-size:20px; cursor:pointer" onclick="openNav()">Menu</span>
-
-            <script>
-                function openNav() {
-                  document.getElementById("myNav").style.height = "100%";
-                }
                 
-                function closeNav() {
-                  document.getElementById("myNav").style.height = "0%";
-                }
-            </script>
+                <span style="font-size:20px; cursor:pointer" onclick="openNav()">Menu</span>
+
+                <script>
+                    function openNav() {
+                        document.getElementById("myNav").style.height = "100%";
+                    }
+                    function closeNav() {
+                        document.getElementById("myNav").style.height = "0%";
+                    }
+                </script>
             </li>
         </div>
 
@@ -51,14 +57,7 @@
             <p>Hi I am</p>
             <h1 style="font-weight: 700;">Leonel Esguerra</h1>
             <p>I currently live here in Laguna, Philippines. I studied Bachelor of Science in Computer Science. For the four years of studying Computer Science, I was interested in the field of designing. I love to see designs and I love to converted my ideas to reality. I want to pursue my career in designing and practice my skills in the industry.<br><br>
-                In my early experience as an On-The-Job Trainee when I am Senior High School and College and
-                also working as a production operator in a company, I was involved in communicating with
-                different people, answering calls, accomplishing tasks, working with the team, and work
-                independently. In my experience as an On-The-Job Trainee at DOST-FPRDI, I was assigned a role
-                as a Frontend Developer. I am responsible for designing and developing the user interface (UI)
-                of the system and preparing technical documentation. Being an OJT, I was also responsible to
-                assist other employees in terms of technical aspects, attending seminars, answering calls and
-                preparing weekly accomplishment reports.</p>
+                In my early experience as an On-The-Job Trainee when I am Senior High School and College and also working as a production operator in a company, I was involved in communicating with different people, answering calls, accomplishing tasks, working with the team, and work independently. In my experience as an On-The-Job Trainee at DOST-FPRDI, I was assigned a role as a Frontend Developer. I am responsible for designing and developing the user interface (UI) of the system and preparing technical documentation. Being an OJT, I was also responsible to assist other employees in terms of technical aspects, attending seminars, answering calls and preparing weekly accomplishment reports.</p>
             <p style="font-weight: 700">FAVORITE TOOLS</p>
             <div class="img2">
                 <li><img src="images/figma.png" alt=""></li>
@@ -78,10 +77,26 @@
                 <center>
                     <h2>Let's Connect</h2>
                     <div class="img3">
-                        <li><a href="https://www.facebook.com/nhelez04" target="_blank"><img src="images/fb.png" alt=""></a></li>
-                        <li><a href="https://www.instagram.com/nhel_ez/" target="_blank"><img src="images/instagram.png" alt=""></a></li>
-                        <li><a href="mailto:leonelesguerra0401@gmail.com" target="_blank"><img src="images/gmail.png" alt=""></a></li>
-                        <li><a href="https://www.linkedin.com/in/leonel-esguerra-3a0801211" target="_blank"><img src="images/linkedin.png" alt=""></a></li>
+                        <li>
+                            <a href="https://www.facebook.com/nhelez04" target="_blank">
+                                <img src="images/fb.png" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.instagram.com/nhel_ez/" target="_blank">
+                                <img src="images/instagram.png" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="mailto:leonelesguerra0401@gmail.com" target="_blank">
+                                <img src="images/gmail.png" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/leonel-esguerra-3a0801211" target="_blank">
+                                <img src="images/linkedin.png" alt="">
+                            </a>
+                        </li>
                     </div>
                     <p style="font-size: 12px;">Copyright © 2022 Leonel Esguerra. All right reserved.</p>
                 </center>
