--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <div class="header">
             <p>Are you finding a modern designs for your business?</p>
-            <h1>Let's convert idea to reality!</h1>
+            <h1>Let's convert ideas into reality!</h1>
             <p>Here's my recent designs:</p>
         </div>
 
