--- a/case-study.html
+++ b/case-study.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <link rel="icon" type="image/png" href="images/Personal Website-Advance Logo.png">
-    <title>Leonel Esguerra</title>
+    <title>Case Studies | Leonel Esguerra</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Leonel Esguerra">
@@ -31,7 +31,7 @@
                         <a href="index.html">Home</a>
                         <a href="about.html">About</a>
                         <a href="show-case.html">Showcase</a>
-                        <a href="case-study.html">Case Study</a>
+                        <a href="case-study.html">Case Studies</a>
                     </div>
                 </div>
 
@@ -50,7 +50,7 @@
         </div>
 
         <div class="header-nav-showcase">
-            <h1>Case Study</h1>
+            <h1>Case Studies</h1>
         </div>
 
         <div>
