--- a/show-case.html
+++ b/show-case.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <link rel="icon" type="image/png" href="images/Personal Website-Advance Logo.png">
-    <title>Leonel Esguerra</title>
+    <title>Showcase | Leonel Esguerra</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Leonel Esguerra">
