--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <a href="index.html">Home</a>
                         <a href="about.html">About</a>
                         <a href="show-case.html">Showcase</a>
-                        <a href="case-study.html">Case Study</a>
+                        <a href="case-study.html">Case Studies</a>
                     </div>
                 </div>
 
