--- a/case-study.html
+++ b/case-study.html
@@ -57,7 +57,7 @@
             <center>
                 <div class="img1">
                     <li>
-                        <a href="https://www.figma.com/community/file/1114921249053475523" target="_blank">
+                        <a href="dmis.html" target="_blank">
                             <img src="images/dmis.png" alt="" class="zoom">
                         </a>
                     </li>
