--- a/case-study.html
+++ b/case-study.html
@@ -57,22 +57,22 @@
             <center>
                 <div class="img1">
                     <li>
-                        <a href="dmis.html" target="_blank">
+                        <a href="dmis.html">
                             <img src="images/dmis.png" alt="" class="zoom">
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.figma.com/community/file/1069145923032887684" target="_blank">
+                        <a href="https://www.figma.com/community/file/1069145923032887684">
                             <img src="images/rdro-riders.png" alt="" class="zoom">
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.figma.com/community/file/1069145923032887684" target="_blank">
+                        <a href="https://www.figma.com/community/file/1069145923032887684">
                             <img src="images/rdro-admin.png" alt="" class="zoom">
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.figma.com/community/file/1069145923032887684" target="_blank">
+                        <a href="https://www.figma.com/community/file/1069145923032887684">
                             <img src="images/rdro-admin-website.png" alt="" class="zoom">
                         </a>
                     </li>
