--- a/dmis.html
+++ b/dmis.html
@@ -48,72 +48,65 @@
             </li>
         </div>
 
-        <div class="header">
-            <p>Case Study #1</p>
-            <h1>DOST-FPRDI ODPS Document Management Information System</h1>
+        <div class="header-case">
+            <p>Overview</p>
+            <h1>DOST-FPRDI OD-PS Document Management Information System</h1>
+            <h6>DOST-FPRDI - Office of the Director - Planning Staff - Document Management Information System is a system project during the 300 hours on-the-job training. The system can store the incoming and outgoing documents, can search a particular documents and categorize the document based on the physical cabinet in the office.</h6>
         </div>
 
         <div>
             <center>
                 <div class="img1">
                     <li>
-                        <a href="https://www.figma.com/community/file/1114921249053475523" target="_blank">
-                            <img src="images/dmis.png" alt="" class="zoom">
-                        </a>
+                        <img src="images/color-dmis.png" alt="" class="zoom">
+                        <h1>Color Exploration</h1>
                     </li>
                     <li>
-                        <a href="https://www.figma.com/community/file/1069145923032887684" target="_blank">
-                            <img src="images/rdro-riders.png" alt="" class="zoom">
-                        </a>
+                        <img src="images/nunito.PNG" alt="" class="zoom">
+                        <h1>Typography</h1>
                     </li>
                     <li>
-                        <a href="https://www.figma.com/community/file/1069145923032887684" target="_blank">
-                            <img src="images/rdro-admin.png" alt="" class="zoom">
-                        </a>
+                        <img src="images/dmis-logo.png" alt="" class="zoom">
+                        <h1>Logo Discovery</h1>
                     </li>
-                    <a href="show-case.html" style="text-decoration: none;"><button class="btn-grad">See More</button></a>
                 </div>
             </center>
         </div>
 
-        <div class="intro">
-            <p>Hi I am</p>
-            <h1 style="font-weight: 700;">Leonel Esguerra</h1>
-            <p>I currently live here in Laguna, Philippines. I studied Bachelor of Science in Computer Science. For the four years of studying Computer Science, I was interested in the field of designing. I love to see designs and I love to converted my ideas to reality. I want pursue my career in designing and practice my skill in the industry. <a href="about.html" style="color: red;">See more</a></p>
-            <p style="font-weight: 700;">What is UI/UX Designs?</p>
-            <p>The user interface is the graphical layout of an application. It consists of the buttons users click on, the text they read, the images, sliders, text entry fields, and all the rest of the items the user interacts with. This includes screen layout, transitions, interface animations and every single micro-interaction. Any sort of visual element, interaction, or animation must all be designed.</p>
-            <p>A user's experience of the app is determined by how they interact with it. Is the experience smooth and intuitive or clunky and confusing? Does navigating the app feel logical or does it feel arbitrary? Does interacting with the app give people the sense that they're efficiently accomplishing the tasks they set out to achieve or does it feel like a struggle? User experience is determined by how easy or difficult it is to interact with the user interface elements that the UI designers have created.</p>
-            <p style="font-weight: 700;">What is Web Development?</p>
-            <p>Web development refers in general to the tasks associated with developing websites for hosting via intranet or internet. The web development process includes web design, web content development, client-side/server-side scripting and network security configuration, among other tasks.<br><br></p>
-            
-            <div class="footer">
-                <center>
-                    <h2>Let's Connect</h2>
-                    <div class="img3">
-                        <li>
-                            <a href="https://www.facebook.com/nhelez04" target="_blank">
-                                <img src="images/fb.png" alt="">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.instagram.com/nhel_ez/" target="_blank">
-                                <img src="images/instagram.png" alt="">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="mailto:leonelesguerra0401@gmail.com" target="_blank">
-                                <img src="images/gmail.png" alt="">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.linkedin.com/in/leonel-esguerra-3a0801211" target="_blank">
-                                <img src="images/linkedin.png" alt="">
-                            </a>
-                        </li>
-                    </div>
-                    <p style="font-size: 12px;">Copyright © 2022 Leonel Esguerra. All right reserved.</p>
-                </center>
+        <center>
+            <div class="case-button">
+                <li><a href="https://www.figma.com/community/file/1069145923032887684" target="_blank" style="text-decoration: none;"><button class="btn-grad">Show In Figma</button></a></li>
+                <li><a href="https://github.com/nhel-ez/DOST-DPRDI---ODPS-DMIS.git" target="_blank" style="text-decoration: none;"><button class="btn-grad">Show In Github</button></a></li>
             </div>
+        </center>
+        
+        <div class="footer">
+            <center>
+                <h2>Let's Connect</h2>
+                <div class="img3">
+                    <li>
+                        <a href="https://www.facebook.com/nhelez04" target="_blank">
+                            <img src="images/fb.png" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/nhel_ez/" target="_blank">
+                            <img src="images/instagram.png" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="mailto:leonelesguerra0401@gmail.com" target="_blank">
+                            <img src="images/gmail.png" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/leonel-esguerra-3a0801211" target="_blank">
+                            <img src="images/linkedin.png" alt="">
+                        </a>
+                    </li>
+                </div>
+                <p style="font-size: 12px;">Copyright © 2022 Leonel Esguerra. All right reserved.</p>
+            </center>
         </div>
     </body>
 </html>
