--- a/dmis.html
+++ b/dmis.html
@@ -54,20 +54,26 @@
             <h6>DOST-FPRDI - Office of the Director - Planning Staff - Document Management Information System is a system project during the 300 hours on-the-job training. The system can store the incoming and outgoing documents, can search a particular documents and categorize the document based on the physical cabinet in the office.</h6>
         </div>
 
+        <center>
+            <div class="header-full">
+                <img src="images/dmis-case.png" alt="" class="zoom">
+            </div>
+        </center>
+
         <div>
             <center>
                 <div class="img1">
                     <li>
                         <img src="images/color-dmis.png" alt="" class="zoom">
-                        <h1>Color Exploration</h1>
+                        <h1>Color Palette</h1>
                     </li>
                     <li>
-                        <img src="images/nunito.PNG" alt="" class="zoom">
-                        <h1>Typography</h1>
+                        <img src="images/nunito.png" alt="" class="zoom">
+                        <h1>Fonts</h1>
                     </li>
                     <li>
                         <img src="images/dmis-logo.png" alt="" class="zoom">
-                        <h1>Logo Discovery</h1>
+                        <h1>Logo</h1>
                     </li>
                 </div>
             </center>
