--- a/dmis.html
+++ b/dmis.html
@@ -65,11 +65,11 @@
                 <div class="img1">
                     <li>
                         <img src="images/color-dmis.png" alt="" class="zoom">
-                        <h1>Color Palette</h1>
+                        <h1>Color Exploration</h1>
                     </li>
                     <li>
                         <img src="images/nunito.png" alt="" class="zoom">
-                        <h1>Fonts</h1>
+                        <h1>Typography</h1>
                     </li>
                     <li>
                         <img src="images/dmis-logo.png" alt="" class="zoom">
@@ -83,6 +83,8 @@
             <div class="case-button">
                 <li><a href="https://www.figma.com/community/file/1114921249053475523" target="_blank" style="text-decoration: none;"><button class="btn-grad">Show In Figma</button></a></li>
                 <li><a href="https://github.com/nhel-ez/DOST-DPRDI---ODPS-DMIS.git" target="_blank" style="text-decoration: none;"><button class="btn-grad">Show In Github</button></a></li>
+                <li><a href="https://docs.google.com/document/d/1_mFna2wNSxZQhY41vSs2S9F3Y9f5j_2x/edit?usp=sharing&ouid=116209578237606783836&rtpof=true&sd=true" target="_blank" style="text-decoration: none;"><button class="btn-grad">Documentation</button></a></li>
+                <li><a href="https://docs.google.com/document/d/1uT-QR5OECRVBMKqF0TyMF0uVGapxR1dd/edit?usp=sharing&ouid=116209578237606783836&rtpof=true&sd=true" target="_blank" style="text-decoration: none;"><button class="btn-grad">User Manual</button></a></li>
             </div>
         </center>
         
