--- a/rdro.html
+++ b/rdro.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <link rel="icon" type="image/png" href="images/Personal Website-Advance Logo.png">
-    <title>Case Studies | Leonel Esguerra</title>
+    <title>RDRO</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Leonel Esguerra">
@@ -19,7 +19,6 @@
                     <img src="images/Personal Website-Advance Logo.png" alt="logo">
                 </a>
             </li>
-
             <li class="author-name">
                 <a href="index.html">Leonel Esguerra</a>
             </li>
@@ -49,27 +48,56 @@
             </li>
         </div>
 
-        <div class="header-nav-showcase">
-            <h1>Case Studies</h1>
+        <div class="header-case">
+            <p>Overview</p>
+            <h1>Rider's Delivery Route Optimization Using A* Algorithm</h1>
+            <h6>Rider's Delivery Route Optimization Using A* Algorithm is a thesis and system application that the delivery riders can find an efficient route from nearest up to the next nearest location and the logistics company administrator can track and monitor the location of the delivery during working hours.</h6>
         </div>
+
+        <center>
+            <div class="header-full">
+                <img src="images/rdro-blue.png" alt="" class="zoom">
+            </div>
+            <div class="header-full">
+                <img src="images/rdro-red.png" alt="" class="zoom">
+            </div>
+            <div class="header-full">
+                <img src="images/rdro-web.png" alt="" class="zoom">
+            </div>
+        </center>
 
         <div>
             <center>
                 <div class="img1">
                     <li>
-                        <a href="dmis.html">
-                            <img src="images/dmis.png" alt="" class="zoom">
-                        </a>
+                        <img src="images/color-rdro-riders.png" alt="" class="zoom">
+                        <h1>Color Exploration (Riders)</h1>
                     </li>
                     <li>
-                        <a href="rdro.html">
-                            <img src="images/rdro-riders.png" alt="" class="zoom">
-                        </a>
+                        <img src="images/color-rdro-admin.png" alt="" class="zoom">
+                        <h1>Color Exploration (Admin)</h1>
+                    </li>
+                    <li>
+                        <img src="images/open-sans.png" alt="" class="zoom">
+                        <h1>Typography</h1>
+                    </li>
+                    <li>
+                        <img src="images/rdro-logo.png" alt="" class="zoom">
+                        <h1>Logo</h1>
                     </li>
                 </div>
             </center>
         </div>
-            
+
+        <center>
+            <div class="case-button">
+                <li><a href="https://www.figma.com/community/file/1069145923032887684" target="_blank" style="text-decoration: none;"><button class="btn-grad">Show In Figma</button></a></li>
+                <li><a href="https://play.google.com/store/apps/details?id=com.cs4.CS4_FINAL" target="_blank" style="text-decoration: none;"><button class="btn-grad">Show In App</button></a></li>
+                <li><a href="https://drive.google.com/file/d/1cwWTkwwpDitv814t4AB9PX2qO7P8UmFD/view?usp=sharing" target="_blank" style="text-decoration: none;"><button class="btn-grad">Journal Paper</button></a></li>
+                <li><a href="https://drive.google.com/file/d/10kGmPSPVxbez8ISIpyzxnmdC2ShbcXc2/view?usp=sharing" target="_blank" style="text-decoration: none;"><button class="btn-grad">User Manual</button></a></li>
+            </div>
+        </center>
+        
         <div class="footer">
             <center>
                 <h2>Let's Connect</h2>
