--- a/show-case.html
+++ b/show-case.html
@@ -57,22 +57,22 @@
             <center>
                 <div class="img1">
                     <li>
-                        <a href="https://www.figma.com/community/file/1114921249053475523" target="_blank">
+                        <a href="dmis.html" target="_blank">
                             <img src="images/dmis.png" alt="" class="zoom">
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.figma.com/community/file/1069145923032887684" target="_blank">
+                        <a href="rdro.html" target="_blank">
                             <img src="images/rdro-riders.png" alt="" class="zoom">
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.figma.com/community/file/1069145923032887684" target="_blank">
+                        <a href="rdro.html" target="_blank">
                             <img src="images/rdro-admin.png" alt="" class="zoom">
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.figma.com/community/file/1069145923032887684" target="_blank">
+                        <a href="rdro.html" target="_blank">
                             <img src="images/rdro-admin-website.png" alt="" class="zoom">
                         </a>
                     </li>
