--- a/case-study.html
+++ b/case-study.html
@@ -49,13 +49,13 @@
             </li>
         </div>
 
-        <div class="header-nav-showcase">
+        <div class="header-nav-showcase slide">
             <h1>Case Studies</h1>
         </div>
 
         <div>
             <center>
-                <div class="img1">
+                <div class="img1 slide">
                     <li>
                         <a href="dmis.html">
                             <img src="images/dmis.png" alt="" class="zoom">
@@ -70,7 +70,7 @@
             </center>
         </div>
             
-        <div class="footer">
+        <div class="footer slide">
             <center>
                 <h2>Let's Connect</h2>
                 <div class="img3">
