--- a/dmis.html
+++ b/dmis.html
@@ -48,21 +48,21 @@
             </li>
         </div>
 
-        <div class="header-case">
+        <div class="header-case slide">
             <p>Overview</p>
             <h1>DOST-FPRDI OD-PS Document Management Information System</h1>
             <h6>DOST-FPRDI - Office of the Director - Planning Staff - Document Management Information System is a system project during the 300 hours on-the-job training. The system can store the incoming and outgoing documents, can search a particular documents and categorize the document based on the physical cabinet in the office.</h6>
         </div>
 
         <center>
-            <div class="header-full">
+            <div class="header-full slide">
                 <img src="images/dmis-case.png" alt="" class="zoom">
             </div>
         </center>
 
         <div>
             <center>
-                <div class="img1">
+                <div class="img1 slide">
                     <li>
                         <img src="images/color-dmis.png" alt="" class="zoom">
                         <h1>Color Exploration</h1>
@@ -80,7 +80,7 @@
         </div>
 
         <center>
-            <div class="case-button">
+            <div class="case-button slide">
                 <li><a href="https://www.figma.com/community/file/1114921249053475523" target="_blank" style="text-decoration: none;"><button class="btn-grad">Show In Figma</button></a></li>
                 <li><a href="https://github.com/nhel-ez/DOST-DPRDI---ODPS-DMIS.git" target="_blank" style="text-decoration: none;"><button class="btn-grad">Show In Github</button></a></li>
                 <li><a href="https://docs.google.com/document/d/1_mFna2wNSxZQhY41vSs2S9F3Y9f5j_2x/edit?usp=sharing&ouid=116209578237606783836&rtpof=true&sd=true" target="_blank" style="text-decoration: none;"><button class="btn-grad">Documentation</button></a></li>
@@ -88,7 +88,7 @@
             </div>
         </center>
         
-        <div class="footer">
+        <div class="footer slide">
             <center>
                 <h2>Let's Connect</h2>
                 <div class="img3">
