--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </li>
         </div>
 
-        <div class="header">
+        <div class="header slide">
             <p>Are you finding a modern designs for your business?</p>
             <h1>Let's convert ideas into reality!</h1>
             <p>Here's my recent designs:</p>
@@ -56,19 +56,19 @@
 
         <div>
             <center>
-                <div class="img1">
+                <div class="img1 slide">
                     <li>
-                        <a href="dmis.html" target="_blank">
+                        <a href="dmis.html">
                             <img src="images/dmis.png" alt="" class="zoom">
                         </a>
                     </li>
                     <li>
-                        <a href="rdro.html" target="_blank">
+                        <a href="rdro.html">
                             <img src="images/rdro-riders.png" alt="" class="zoom">
                         </a>
                     </li>
                     <li>
-                        <a href="rdro.html" target="_blank">
+                        <a href="rdro.html">
                             <img src="images/rdro-admin.png" alt="" class="zoom">
                         </a>
                     </li>
@@ -77,7 +77,7 @@
             </center>
         </div>
 
-        <div class="intro">
+        <div class="intro slide">
             <p>Hi I am</p>
             <h1 style="font-weight: 700;">Leonel Esguerra</h1>
             <p>I currently live here in Laguna, Philippines. I studied Bachelor of Science in Computer Science. For the four years of studying Computer Science, I was interested in the field of designing. I love to see designs and I love to converted my ideas to reality. I want pursue my career in designing and practice my skill in the industry. <a href="about.html" style="color: red;">See more</a></p>
@@ -87,13 +87,13 @@
             <p style="font-weight: 700;">What is Web Development?</p>
             <p>Web development refers in general to the tasks associated with developing websites for hosting via intranet or internet. The web development process includes web design, web content development, client-side/server-side scripting and network security configuration, among other tasks.<br><br></p>
             
-            <div class="footer">
+            <div class="footer slide">
                 <center>
                     <h2>Let's Connect</h2>
                     <div class="img3">
                         <li>
                             <a href="https://www.facebook.com/nhelez04" target="_blank">
-                                <img src="images/fb.png" alt="">
+                                <img src="images/fb.png" alt="" class="slideanim">
                             </a>
                         </li>
                         <li>
