--- a/rdro.html
+++ b/rdro.html
@@ -48,27 +48,27 @@
             </li>
         </div>
 
-        <div class="header-case">
+        <div class="header-case slide">
             <p>Overview</p>
             <h1>Rider's Delivery Route Optimization Using A* Algorithm</h1>
             <h6>Rider's Delivery Route Optimization Using A* Algorithm is a thesis and system application that the delivery riders can find an efficient route from nearest up to the next nearest location and the logistics company administrator can track and monitor the location of the delivery during working hours.</h6>
         </div>
 
         <center>
-            <div class="header-full">
+            <div class="header-full slide">
                 <img src="images/rdro-blue.png" alt="" class="zoom">
             </div>
-            <div class="header-full">
+            <div class="header-full slide">
                 <img src="images/rdro-red.png" alt="" class="zoom">
             </div>
-            <div class="header-full">
+            <div class="header-full slide">
                 <img src="images/rdro-web.png" alt="" class="zoom">
             </div>
         </center>
 
         <div>
             <center>
-                <div class="img1">
+                <div class="img1 slide">
                     <li>
                         <img src="images/color-rdro-riders.png" alt="" class="zoom">
                         <h1>Color Exploration (Riders)</h1>
@@ -90,7 +90,7 @@
         </div>
 
         <center>
-            <div class="case-button">
+            <div class="case-button slide">
                 <li><a href="https://www.figma.com/community/file/1069145923032887684" target="_blank" style="text-decoration: none;"><button class="btn-grad">Show In Figma</button></a></li>
                 <li><a href="https://play.google.com/store/apps/details?id=com.cs4.CS4_FINAL" target="_blank" style="text-decoration: none;"><button class="btn-grad">Show In App</button></a></li>
                 <li><a href="https://drive.google.com/file/d/1cwWTkwwpDitv814t4AB9PX2qO7P8UmFD/view?usp=sharing" target="_blank" style="text-decoration: none;"><button class="btn-grad">Journal Paper</button></a></li>
@@ -98,7 +98,7 @@
             </div>
         </center>
         
-        <div class="footer">
+        <div class="footer slide">
             <center>
                 <h2>Let's Connect</h2>
                 <div class="img3">
