--- a/about.html
+++ b/about.html
@@ -48,12 +48,12 @@
             </li>
         </div>
 
-        <div class="header-nav-content">
+        <div class="header-nav-content slide">
             <p>About me</p>
             <h1>Frontend Developer & UI/UX Designer</h1>
         </div>
 
-        <div class="intro">
+        <div class="intro slide">
             <p>Hi I am</p>
             <h1 style="font-weight: 700;">Leonel Esguerra</h1>
             <p>I currently live here in Laguna, Philippines. I studied Bachelor of Science in Computer Science. For the four years of studying Computer Science, I was interested in the field of designing. I love to see designs and I love to converted my ideas to reality. I want to pursue my career in designing and practice my skills in the industry.<br><br>
@@ -73,7 +73,7 @@
                 <li><img src="images/jquery.png" alt=""></li>
                 <li><img src="images/laravel.png" alt=""></li>
             </div>
-            <div class="footer">
+            <div class="footer slide">
                 <center>
                     <h2>Let's Connect</h2>
                     <div class="img3">
