--- a/show-case.html
+++ b/show-case.html
@@ -49,30 +49,30 @@
             </li>
         </div>
 
-        <div class="header-nav-showcase">
+        <div class="header-nav-showcase slide">
             <h1>Showcase</h1>
         </div>
 
         <div>
             <center>
-                <div class="img1">
+                <div class="img1 slide">
                     <li>
-                        <a href="dmis.html" target="_blank">
+                        <a href="dmis.html">
                             <img src="images/dmis.png" alt="" class="zoom">
                         </a>
                     </li>
                     <li>
-                        <a href="rdro.html" target="_blank">
+                        <a href="rdro.html">
                             <img src="images/rdro-riders.png" alt="" class="zoom">
                         </a>
                     </li>
                     <li>
-                        <a href="rdro.html" target="_blank">
+                        <a href="rdro.html">
                             <img src="images/rdro-admin.png" alt="" class="zoom">
                         </a>
                     </li>
                     <li>
-                        <a href="rdro.html" target="_blank">
+                        <a href="rdro.html">
                             <img src="images/rdro-admin-website.png" alt="" class="zoom">
                         </a>
                     </li>
@@ -100,7 +100,7 @@
             </center>
         </div>
             
-        <div class="footer">
+        <div class="footer slide">
             <center>
                 <h2>Let's Connect</h2>
                 <div class="img3">
