--- a/about.html
+++ b/about.html
@@ -50,13 +50,13 @@
 
         <div class="header-nav-content slide">
             <p>About me</p>
-            <h1>Frontend Developer & UI/UX Designer</h1>
+            <h1>Full Stack Developer and Designer</h1>
         </div>
 
         <div class="intro slide">
             <p>Hi I am</p>
             <h1 style="font-weight: 700;">Leonel Esguerra</h1>
-            <p>I currently live here in Laguna, Philippines. I studied Bachelor of Science in Computer Science. For the four years of studying Computer Science, I was interested in the field of designing. I love to see designs and I love to converted my ideas to reality. I want to pursue my career in designing and practice my skills in the industry.<br><br>
+            <p>I currently live here in Laguna, Philippines. I studied Bachelor of Science in Computer Science. For the past four years of studying Computer Science, I was interested in the field of designing and developing websites and system. I love to see designs and I love to convert my ideas into reality. I want pursue my career in designs and development of websites and system and practice my skill in the industry.<br><br>
                 In my early experience as an On-The-Job Trainee when I am Senior High School and College and also working as a production operator in a company, I was involved in communicating with different people, answering calls, accomplishing tasks, working with the team, and work independently. In my experience as an On-The-Job Trainee at DOST-FPRDI, I was assigned a role as a Frontend Developer. I am responsible for designing and developing the user interface (UI) of the system and preparing technical documentation. Being an OJT, I was also responsible to assist other employees in terms of technical aspects, attending seminars, answering calls and preparing weekly accomplishment reports.</p>
             <p style="font-weight: 700">FAVORITE TOOLS</p>
             <div class="img2">
