--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="header slide">
             <p>Are you finding a modern designs for your business?</p>
             <h1>Let's convert ideas into reality!</h1>
-            <p>Here's my recent designs:</p>
+            <p>Here's my recent projects:</p>
         </div>
 
         <div>
@@ -80,7 +80,7 @@
         <div class="intro slide">
             <p>Hi I am</p>
             <h1 style="font-weight: 700;">Leonel Esguerra</h1>
-            <p>I currently live here in Laguna, Philippines. I studied Bachelor of Science in Computer Science. For the four years of studying Computer Science, I was interested in the field of designing. I love to see designs and I love to converted my ideas to reality. I want pursue my career in designing and practice my skill in the industry. <a href="about.html" style="color: red;">See more</a></p>
+            <p>I currently live here in Laguna, Philippines. I studied Bachelor of Science in Computer Science. For the past four years of studying Computer Science, I was interested in the field of designing and developing websites and system. I love to see designs and I love to convert my ideas into reality. I want pursue my career in designs and development of websites and system and practice my skill in the industry. <a href="about.html" style="color: red;">See more</a></p>
             <p style="font-weight: 700;">What is UI/UX Designs?</p>
             <p>The user interface is the graphical layout of an application. It consists of the buttons users click on, the text they read, the images, sliders, text entry fields, and all the rest of the items the user interacts with. This includes screen layout, transitions, interface animations and every single micro-interaction. Any sort of visual element, interaction, or animation must all be designed.</p>
             <p>A user's experience of the app is determined by how they interact with it. Is the experience smooth and intuitive or clunky and confusing? Does navigating the app feel logical or does it feel arbitrary? Does interacting with the app give people the sense that they're efficiently accomplishing the tasks they set out to achieve or does it feel like a struggle? User experience is determined by how easy or difficult it is to interact with the user interface elements that the UI designers have created.</p>
