--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
             <center>
                 <div class="img1 slide">
                     <li>
+                        <a href="http://nhelez.me/" target="_blank">
+                            <img src="images/advance-website.png" alt="" class="zoom">
+                        </a>
+                    </li>
+                    <li>
                         <a href="dmis.html">
                             <img src="images/dmis.png" alt="" class="zoom">
                         </a>
@@ -65,11 +70,6 @@
                     <li>
                         <a href="rdro.html">
                             <img src="images/rdro-riders.png" alt="" class="zoom">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="rdro.html">
-                            <img src="images/rdro-admin.png" alt="" class="zoom">
                         </a>
                     </li>
                     <a href="show-case.html" style="text-decoration: none;"><button class="btn-grad">See More</button></a>
