--- a/show-case.html
+++ b/show-case.html
@@ -77,7 +77,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.figma.com/community/file/1069146567302323589" target="_blank">
+                        <a href="http://nhelez.me/" target="_blank">
                             <img src="images/advance-website.png" alt="" class="zoom">
                         </a>
                     </li>
