--- a/show-case.html
+++ b/show-case.html
@@ -108,6 +108,14 @@
             </a>
           </li>
           <li>
+            <a
+              href="https://nhelez.me/The-Chilay-s-Pizza/index.html"
+              target="_blank"
+            >
+              <img src="images/the-chilays-pizza.png" alt="" class="zoom" />
+            </a>
+          </li>
+          <li>
             <a href="https://nhelez.me/TheLeoCars/index.html" target="_blank">
               <img src="images/the-leo-cars.png" alt="" class="zoom" />
             </a>
