--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 
     <div class="header-nav-content slide">
       <p>About me</p>
-      <h1>Full Stack Developer and Designer</h1>
+      <h1>Frontend Web Developer and Designer</h1>
     </div>
 
     <div class="intro slide">
