--- a/about.html
+++ b/about.html
@@ -88,14 +88,22 @@
         <li><img src="images/canva.png" alt="" /></li>
         <li><img src="images/vscode.png" alt="" /></li>
         <li><img src="images/github.png" alt="" /></li>
+        <li><img src="images/xampp.png" alt="" /></li>
+        <li><img src="images/phpmyadmin.png" alt="" /></li>
       </div>
-      <p style="font-weight: 700">FAVORITE WEB DEVELOPMENT LANGUAGES</p>
+      <p style="font-weight: 700">
+        FAVORITE WEB DEVELOPMENT LANGUAGES, FRAMEWORKS AND DATABASES
+      </p>
       <div class="img2">
         <li><img src="images/html.png" alt="" /></li>
         <li><img src="images/css.png" alt="" /></li>
         <li><img src="images/javascript.png" alt="" /></li>
         <li><img src="images/jquery.png" alt="" /></li>
         <li><img src="images/laravel.png" alt="" /></li>
+        <li><img src="images/react.png" alt="" /></li>
+        <li><img src="images/bootstrap.png" alt="" /></li>
+        <li><img src="images/php.png" alt="" /></li>
+        <li><img src="images/mysql.png" alt="" /></li>
       </div>
       <div class="footer slide">
         <center>
