--- a/show-case.html
+++ b/show-case.html
@@ -64,6 +64,11 @@
       <center>
         <div class="img1 slide">
           <li>
+            <a href="http://e-commerce.jemshop.cf/" target="_blank">
+              <img src="images/jemshop.png" alt="" class="zoom" />
+            </a>
+          </li>
+          <li>
             <a href="http://nhelez.me/" target="_blank">
               <img src="images/advance-website.png" alt="" class="zoom" />
             </a>
