--- a/index.html
+++ b/index.html
@@ -79,14 +79,9 @@
               <img src="images/dmis.png" alt="" class="zoom" />
             </a>
           </li>
-          <li>
-            <a href="rdro.html">
-              <img src="images/rdro-riders.png" alt="" class="zoom" />
-            </a>
-          </li>
-          <a href="show-case.html" style="text-decoration: none"
-            ><button class="btn-grad">View All</button></a
-          >
+          <a href="show-case.html" style="text-decoration: none">
+            <button class="btn-grad">View All</button>
+          </a>
         </div>
       </center>
     </div>
